# omni-mapper

./: .gitignore  LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
code/ekf_implementation/: CMakeLists.txt  package.xml
code/ekf_implementation/launch/: ekf.launch
code/ekf_implementation/msg/: encoder.msg
code/ekf_implementation/src/: ekf_node.cpp
code/icp/: CMakeLists.txt
code/icp/src/: icp_solver_node.cpp  scan_to_pcl.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/hls_lfcd_lds_driver/: .catkin  .rosinstall  setup.sh
devel/.private/icp/: .catkin  .rosinstall
devel/lib/hls_lfcd_lds_driver/: hlds_laser_publisher  hlds_laser_segment_publisher
devel/lib/icp/: icp  icp_retry
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  hls_lfcd_lds_driver.pc  icp.pc
devel/share/icp/cmake/: icpConfig-version.cmake  (+1 more)
fw/: .gitignore
fw/.metadata/: .log4j2.xml  version.ini
fw/omni-mapper/: .cproject  .mxproject  .project  omni-mapper Debug.launch  omni-mapper.ioc
fw/omni-mapper/Debug/: Makefile  makefile_old  objects.list
logs/icp/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr
pcb/: omni-wheel.kicad_pro
pcb/omni-wheel/: #auto_saved_files#  _autosave-omni-wheel.kicad_pcb  _autosave-omni-wheel.kicad_sch  fp-info-cache  fp-lib-table  omni-wheel.kicad_pcb  omni-wheel.kicad_prl  omni-wheel.kicad_pro  omni-wheel.kicad_sch  omni-wheel.kicad_sch-bak  sym-lib-table
pcb/omni-wheel/footprints/: qr.kicad_mod  terk_sleep.kicad_mod
pcb/omni-wheel/manf_files/: omni-wheel-B_Cu.gbr  omni-wheel-B_Mask.gbr  omni-wheel-B_Paste.gbr  omni-wheel-B_Silkscreen.gbr  omni-wheel-Edge_Cuts.gbr  omni-wheel-F_Cu.gbr  omni-wheel-F_Mask.gbr  omni-wheel-F_Paste.gbr  omni-wheel-F_Silkscreen.gbr  omni-wheel-NPTH.drl  omni-wheel-PTH.drl  omni-wheel-job.gbrjob  omni-wheel.csv
pcb/omni-wheel/syms/: AP63301WU-7.kicad_sym  CD74HC04E.kicad_sym  L1011011MS02Q.kicad_sym  MAX6765TTLD2_T.kicad_sym  SN74AC86DR.kicad_sym  SN74HCT74DR.kicad_sym  terk_sleep.kicad_sym
src/ekf_implementation/: CMakeLists.txt  package.xml
src/ekf_implementation/launch/: ekf.launch
src/ekf_implementation/src/: ekf_node.cpp  encoder_redo.cpp  encoder_vel.cpp  motion_command.cpp  simulated_encoder.cpp
src/icp/: CMakeLists.txt  package.xml
src/icp/include/: KDTree.h  icp.h  kdtree.h  kdtree_test.cpp
src/icp/launch/: icp.launch
src/icp/src/: icp_solver.cpp  icp_solver_node.cpp  icp_solver_retry.cpp  old_solver
src/icp/test/: KDtreeTest.cpp  a.out
src/icp/viz/: icp.viz.rviz
support/: icp_matlab.m  icp_matlab_test.m
test/: a.out  kdnode_test  kdnode_test.cpp
(+38 files in other folders)
